$Id: CHANGES,v 1.7 2000/11/26 22:17:10 lf Exp $

11/19/2000	integrated the last two change entries into the main source
		(patches by Marko Myllynen), fixed bug in log.c, fixed file
		description leak in readin_config, rewrote code in timer.c,
		updated man pages again (from Marko Myllynen, too), PID
		file support (patch from Marko Myllynen, based on a patch
		from Tommi.Komulainen@iki.fi)

15/08/2000	RFC 2461 updates, Mobile IPv6 extensions added

14/07/2000 	added RA interval option and modified some default values
		for timers

06/15/99	changed to run with glibc 2.1 on RedHat 6.0.

03/03/98	radvd now joins ipv6-allrouters on Linux.  Fix contributed
		by A.N.Kuznetsov <kuznet@ms2.inr.ac.ru>.

10/23/97	radvd will now accept any prefix length in its config
		file but will warn about unusual ones

10/19/97	removed backwards compatibility code in recv.c.
		IPV6_HOPLIMIT support is now assumed to exist.

10/19/97	fixed alignment problems in recv.c and send.c.

10/16/97	the Makefile install target now uses mkinstalldirs.

10/16/97	changed all u_int*_t to uint*_t for better POSIX
		compliance and portability. Needs 2.1.57-CVS or glibc.
		BSD seems to need patches.

10/16/97	more intelligent configure; tries to figure out
		where the IPv6 libraries and inclues are (if not in
		the standard places). Searches in /usr/inet6 and /usr/ipv6.

10/15/97	integrated small patches for glibc and BSD from Craig and
		Philip

09/14/97	EUI-64 "support"

09/01/97	centralized all includes into includes.h for easier
		maintainance

08/25/97	changed all occurences of IPV6_TXINFO/IPV6_RXINFO
		to IPV6_PKTINFO

08/25/97	removed some compatibility stuff for older Linux kernels

03/17/97	changed linux/if_arp.h to net/if_arp.h in device-linux.c
		and configure.in (for glibc compatibility)

03/17/97	integrated patch from Philip Blundell <pjb27@cam.ac.uk>
		into configure.in to check for inet_* in libc first and
		then for libinet6 (for glibc compatibility).
